syntax = "proto2";

package signal.proto.wire;

message SignalMessage {
  optional bytes  ratchet_key      = 1;
  optional uint32 counter          = 2;
  optional uint32 previous_counter = 3;
  optional bytes  ciphertext       = 4;
}

message PreKeySignalMessage {
  optional uint32 registration_id   = 5;
  optional uint32 pre_key_id        = 1;
  optional uint32 signed_pre_key_id = 6;
  optional bytes  base_key          = 2;
  optional bytes  identity_key      = 3;
  optional bytes  message           = 4; // SignalMessage
}

message KeyExchangeMessage {
  optional uint32 id                 = 1;
  optional bytes  base_key           = 2;
  optional bytes  ratchet_key        = 3;
  optional bytes  identity_key       = 4;
  optional bytes  base_key_signature = 5;
}

message SenderKeyMessage {
  optional uint32 id         = 1;
  optional uint32 iteration  = 2;
  optional bytes  ciphertext = 3;
}

message SenderKeyDistributionMessage {
  optional uint32 id          = 1;
  optional uint32 iteration   = 2;
  optional bytes  chain_key   = 3;
  optional bytes  signing_key = 4;
}

message DeviceConsistencyCodeMessage {
  optional uint32 generation = 1;
  optional bytes  signature  = 2;
}
